# dogs-as-a-service

./: Cargo.toml  README.md  Trunk.toml  config.yml  diesel.toml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/2023-01-10-210844_create_dogs/: down.sql
backend/src/: config.rs  database.rs  main.rs  schema.rs
backend/src/models/dog/: dog.rs  mod.rs  new_dog.rs
backend/src/views/: mod.rs
backend/src/views/dog/: all.rs  mod.rs  previous.rs  random.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/2023-01-10-210844_create_dogs/: up.sql
