[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers", "json"] }
axum-macros = "0.3.0"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.59"
lazy_static = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
futures = "0.3.21"
env_logger = "0.10"
log = "0.4"
http = "0.2.8"
headers = "0.3.8"
itertools = "0.10.5"
reqwest = { version = "0.11.13", features = ["json"] }
chrono = { version = "0.4.23", features = ["serde"] }
